--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "rs-office",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "googleapis": "^95.0.0",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "^3.0.2"
-  }
+    "name": "rs-office",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "start:dev": "nodemon ./bin/www"
+    },
+    "dependencies": {
+        "cookie-parser": "~1.4.4",
+        "debug": "~2.6.9",
+        "express": "~4.16.1",
+        "googleapis": "^95.0.0",
+        "http-errors": "~1.6.3",
+        "morgan": "~1.9.1",
+        "pug": "^3.0.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.15"
+    }
 }
